# puerta-abierta

./: .dockerignore  .env.docker.example  .env.mcp.local.example  .gitignore  .mcp.json  .vercelignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  package-lock.json  plan.md
apps/backend-rs/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  audit.toml  nixpacks.toml  railway.toml
apps/backend-rs/migrations/: 2026-03-04_s24-agent-runtime-overrides.sql  2026-03-05_s25-agent-runtime-rollout-parity.sql
apps/backend-rs/railway-functions/: process-workflow-jobs.ts
apps/backend-rs/src/: auth.rs  cache.rs  cache_invalidation.rs  config.rs  db.rs  error.rs  main.rs  schemas.rs  state.rs  tenancy.rs
apps/backend-rs/src/middleware/: cors.rs  mod.rs  rate_limit.rs  request_id.rs  security.rs
apps/backend-rs/src/repository/: table_service.rs
apps/backend-rs/src/routes/: agent_chats.rs  agent_inbox.rs  agent_management.rs  agent_playbooks.rs  agent_tools.rs  ai_agent.rs  applications.rs  approvals.rs  booking.rs  calendar.rs  cancellation_policies.rs  collections.rs  demo.rs  deposits.rs  documents.rs  expenses.rs  guest_portal.rs  guests.rs  health.rs  identity.rs  integrations.rs  leases.rs  maintenance.rs  marketplace.rs  messaging.rs  mod.rs  notification_center.rs  notifications.rs  organizations.rs  owner_portal.rs  owner_statements.rs  payments.rs  platform.rs  pricing.rs  properties.rs  public_ical.rs  referrals.rs  reports.rs  reservations.rs  reviews.rs  (+8 more)
apps/backend-rs/src/services/: agent_chats.rs  agent_runs.rs  agent_specs.rs  (+47 more)
(+791 files in other folders)
