[package]
name = "casaora-backend-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = "0.10"
dotenvy = "0.15"
http = "1"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-core = "0.3"
thiserror = "2"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
tower_governor = { version = "0.8", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
validator = { version = "0.19", features = ["derive"] }
url = "2.5.8"
